# ruthless

./: .bazelrc  .gitignore  BUILD.bazel  GEMINI.md  MODULE.bazel  README.md  cards.json  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  go.mod  go.sum  seed.json
api/: README.md
api/v1/: BUILD.bazel  config.proto  ruthless.proto
backend/: BUILD.bazel  Dockerfile  README.md  config.textproto
backend/cmd/cah/: BUILD.bazel  main.go
backend/internal/auth/: BUILD.bazel  auth.go
backend/internal/auth/fake/: BUILD.bazel  fake.go
backend/internal/auth/jwt/: BUILD.bazel  jwt.go
backend/internal/cli/: BUILD.bazel  cards.go  decks.go  game.go  play.go  root.go  server.go  token.go  tui.go
backend/internal/config/: BUILD.bazel  config.go  config_test.go
backend/internal/domain/: BUILD.bazel  card.go  card_test.go  deck.go  deck_test.go  game.go  game_logic.go  game_logic_test.go  game_test.go  session.go  session_test.go  user.go
backend/internal/server/: BUILD.bazel  card_service.go  deck_service.go  friend_service.go  game_service.go  notification_service.go  seed.go  server.go  server_test.go  session_invitation_service.go  session_service.go  user_service.go
backend/internal/storage/: BUILD.bazel  storage.go
backend/internal/storage/memory/: BUILD.bazel  memory.go  memory_test.go
backend/internal/storage/postgres/: BUILD.bazel  postgres.go  session_invitations.go
backend/internal/storage/postgres/migrations/: 0001_initial.sql  0002_card_color.sql  0002_cascade_delete_cards.sql  0003_add_user_identifier.sql  0003_deck_subscriptions.sql  0004_deck_cards_contributor.sql  0004_make_identifier_optional.sql  0005_user_last_active.sql  0006_friends_system.sql  0007_notifications.sql  0008_backfill_notifications.sql  0009_session_invitations.sql
backend/scripts/: BUILD.bazel  validate_api.go
backend/scripts/e2e/: BUILD.bazel  e2e_test.go
backend/scripts/integration/: BUILD.bazel  abandonment_test.go  auth_test.go  card_test.go  deck_test.go  friend_test.go  game_test.go  main_test.go  notification_test.go  session_invitation_test.go  session_list_test.go  visibility_test.go
backend/scripts/registration/: BUILD.bazel  registration_test.go
backend/scripts/testutil/: BUILD.bazel  auth.go  helpers.go
cmd/cah/: main.go
frontend/: BUILD.bazel  BUILD.test.bazel  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  test_define_BUILD.bazel  tsconfig.app.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  config.ts  ruthless.client.ts  ruthless.ts
frontend/src/api/api/v1/: config.ts  ruthless.client.ts  ruthless.ts
frontend/src/api/google/protobuf/: empty.ts  timestamp.ts
frontend/src/components/: Cards.tsx  CreationDialog.tsx  DeckEditor.tsx  DeckSubscribe.tsx  Decks.tsx  Friends.tsx  GameBoard.tsx  InviteFriendDialog.tsx  Library.tsx  Lobby.tsx  Login.tsx  SessionCreationDialog.tsx
frontend/src/context/: AuthContext.tsx
internal/auth/: auth.go
internal/auth/fake/: fake.go
internal/cli/: cards.go  play.go  root.go  server.go
internal/domain/: card.go  card_test.go  game.go
internal/server/: server.go
internal/storage/: storage.go
internal/storage/memory/: memory.go  memory_test.go
scripts/: README.md  run_dev_local.sh  run_local.sh  run_prod_local.sh  stop_dev_local.sh  stop_prod_local.sh
terraform/: README.md  database.tf  server.tf  variables.tf
terraform/environments/preprod/: .terraform.lock.hcl  .terraform.tfstate.lock.info  main.tf  outputs.tf  variables.tf
terraform/environments/prod/: .terraform.lock.hcl  variables.tf
terraform/modules/artifact_registry/: main.tf  outputs.tf  variables.tf
terraform/modules/cloud_run/: main.tf  outputs.tf  variables.tf
terraform/modules/database/: main.tf  outputs.tf  variables.tf
terraform/modules/load_balancer/: main.tf  outputs.tf  variables.tf
terraform/modules/monitoring/: main.tf  variables.tf
