load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

go_library(
    name = "cah_lib",
    srcs = ["main.go"],
    importpath = "github.com/yanicksenn/ruthless/backend/cmd/cah",
    visibility = ["//visibility:private"],
    deps = ["//backend/internal/cli"],
)

go_binary(
    name = "cah",
    data = ["//backend:config.textproto"],
    embed = [":cah_lib"],
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "cah_tar",
    srcs = [":cah"],
    package_dir = "/usr/local/bin",
    visibility = ["//visibility:public"],
)
