load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "auth",
    srcs = ["auth.go"],
    importpath = "github.com/yanicksenn/ruthless/backend/internal/auth",
    visibility = ["//:__subpackages__"],
    deps = [
        "//api/v1:ruthlespb_go_proto",
        "//backend/internal/storage",
        "@com_github_coreos_go_oidc_v3//oidc",
        "@com_github_golang_jwt_jwt_v5//:jwt",
        "@org_golang_x_oauth2//:oauth2",
        "@org_golang_x_oauth2//google",
    ],
)
