load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "cli",
    srcs = [
        "cards.go",
        "decks.go",
        "game.go",
        "play.go",
        "root.go",
        "server.go",
        "token.go",
        "tui.go",
    ],
    importpath = "github.com/yanicksenn/ruthless/backend/internal/cli",
    visibility = ["//:__subpackages__"],
    deps = [
        "//api/v1:ruthlespb_go_proto",
        "//backend/internal/auth",
        "//backend/internal/auth/fake",
        "//backend/internal/auth/jwt",
        "//backend/internal/config",
        "//backend/internal/server",
        "//backend/internal/storage",
        "//backend/internal/storage/memory",
        "//backend/internal/storage/postgres",
        "@com_github_charmbracelet_bubbles//list",
        "@com_github_charmbracelet_bubbletea//:bubbletea",
        "@com_github_charmbracelet_lipgloss//:lipgloss",
        "@com_github_improbable_eng_grpc_web//go/grpcweb",
        "@com_github_rs_cors//:cors",
        "@com_github_spf13_cobra//:cobra",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//credentials/insecure",
        "@org_golang_google_grpc//metadata",
        "@org_golang_x_net//http2",
        "@org_golang_x_net//http2/h2c",
        "@org_golang_x_oauth2//:oauth2",
        "@org_golang_x_oauth2//google",
    ],
)
