load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "server",
    srcs = [
        "card_service.go",
        "deck_service.go",
        "game_service.go",
        "server.go",
        "session_service.go",
    ],
    importpath = "github.com/yanicksenn/ruthless/backend/internal/server",
    visibility = ["//:__subpackages__"],
    deps = [
        "//api/v1:ruthlespb_go_proto",
        "//backend/internal/auth",
        "//backend/internal/domain",
        "//backend/internal/storage",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//metadata",
        "@org_golang_google_grpc//status",
    ],
)

go_test(
    name = "server_test",
    srcs = ["server_test.go"],
    deps = [
        ":server",
        "//api/v1:ruthlespb_go_proto",
        "//backend/internal/domain",
        "//backend/internal/storage/memory",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
