load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

# Legacy end-to-end validator
go_library(
    name = "e2e_lib",
    srcs = ["e2e_test.go"],
    importpath = "github.com/yanicksenn/ruthless/backend/scripts/e2e",
    visibility = ["//visibility:private"],
    deps = [
        "//api/v1:ruthlespb_go_proto",
        "//backend/internal/storage",
        "//backend/scripts/testutil",
        "@com_github_golang_jwt_jwt_v5//:jwt",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//credentials/insecure",
        "@org_golang_google_grpc//metadata",
        "@org_golang_x_oauth2//:oauth2",
    ],
)

go_test(
    name = "e2e_test",
    srcs = ["e2e_test.go"],
    args = [
        "--alice-refresh=$(location //secrets:ruthless.alice.sec)",
        "--bob-refresh=$(location //secrets:ruthless.bob.sec)",
        "--client-secret=$(location //secrets:client_secret_dev.json)",
    ],
    data = [
        "//secrets:client_secret_dev.json",
        "//secrets:ruthless.alice.sec",
        "//secrets:ruthless.bob.sec",
    ],
    importpath = "github.com/yanicksenn/ruthless/backend/scripts/e2e",
    deps = [
        "//api/v1:ruthlespb_go_proto",
        "//backend/internal/storage",
        "//backend/scripts/testutil",
        "@com_github_golang_jwt_jwt_v5//:jwt",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//credentials/insecure",
        "@org_golang_google_grpc//metadata",
        "@org_golang_x_oauth2//:oauth2",
    ],
)
