load("@rules_go//go:def.bzl", "go_test")

go_test(
    name = "integration_test",
    srcs = [
        "auth_test.go",
        "deck_test.go",
        "game_test.go",
        "main_test.go",
    ],
    importpath = "github.com/yanicksenn/ruthless/backend/scripts/integration",
    deps = [
        "//api/v1:ruthlespb_go_proto",
        "//backend/scripts/testutil",
        "@org_golang_google_grpc//codes",
    ],
)
