load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "testutil",
    srcs = [
        "auth.go",
        "helpers.go",
    ],
    importpath = "github.com/yanicksenn/ruthless/backend/scripts/testutil",
    visibility = ["//visibility:public"],
    deps = [
        "//api/v1:ruthlespb_go_proto",
        "//backend/internal/auth",
        "//backend/internal/server",
        "//backend/internal/storage",
        "//backend/internal/storage/memory",
        "@com_github_golang_jwt_jwt_v5//:jwt",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//credentials/insecure",
        "@org_golang_google_grpc//metadata",
        "@org_golang_google_grpc//status",
        "@org_golang_x_oauth2//:oauth2",
        "@org_golang_x_oauth2//google",
    ],
)
