load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "fake",
    srcs = ["fake.go"],
    importpath = "github.com/yanicksenn/ruthless/backend/internal/auth/fake",
    visibility = ["//:__subpackages__"],
    deps = [
        "//api/v1:ruthlespb_go_proto",
        "//backend/internal/auth",
    ],
)
