load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "jwt",
    srcs = ["jwt.go"],
    importpath = "github.com/yanicksenn/ruthless/backend/internal/auth/jwt",
    visibility = ["//visibility:public"],
    deps = [
        "//api/v1:ruthlespb_go_proto",
        "//backend/internal/auth",
        "@com_github_coreos_go_oidc_v3//oidc",
    ],
)
