load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "memory",
    srcs = ["memory.go"],
    importpath = "github.com/yanicksenn/ruthless/backend/internal/storage/memory",
    visibility = ["//:__subpackages__"],
    deps = [
        "//api/v1:ruthlespb_go_proto",
        "//backend/internal/storage",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)

go_test(
    name = "memory_test",
    srcs = ["memory_test.go"],
    deps = [
        ":memory",
        "//backend/internal/domain",
        "//backend/internal/storage",
    ],
)
